[gd_scene load_steps=5 format=3 uid="uid://cjm5lytghbhii"]

[ext_resource type="Script" uid="uid://cuu8umxjba07i" path="res://scripts/screen_state_machine.gd" id="1_7fvvs"]
[ext_resource type="PackedScene" uid="uid://0fxrhieww8y3" path="res://scenes/ui/main_menu.tscn" id="2_lushf"]
[ext_resource type="PackedScene" uid="uid://btrw7gm53yrcs" path="res://scenes/ui/scenario_selector.tscn" id="3_lushf"]
[ext_resource type="Script" uid="uid://bxjn2pu3t0upm" path="res://scripts/ui/settings.gd" id="5_25c13"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenStateMachine" type="Node" parent="."]
script = ExtResource("1_7fvvs")

[node name="MainMenu" parent="ScreenStateMachine" instance=ExtResource("2_lushf")]

[node name="ScenarioSelector" parent="ScreenStateMachine" instance=ExtResource("3_lushf")]
visible = false

[node name="Settings" type="Control" parent="ScreenStateMachine"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_25c13")
metadata/_custom_type_script = "uid://cobqsrqfsrbwt"
