[gd_scene load_steps=15 format=3 uid="uid://ci383xsy48l2e"]

[ext_resource type="Theme" uid="uid://ckm5gw1dv6pnl" path="res://resource/styles/settings.tres" id="1_6a2nt"]
[ext_resource type="Script" uid="uid://bxjn2pu3t0upm" path="res://scripts/ui/settings.gd" id="1_nadmn"]
[ext_resource type="Texture2D" uid="uid://c75vyykpuo21l" path="res://assets/nueva_interfaz/Boton_Menu_Opciones.svg" id="2_aw57t"]
[ext_resource type="Material" uid="uid://tjlab8kl611m" path="res://resource/shaders_materials/main_menu.tres" id="3_5o77p"]
[ext_resource type="Texture2D" uid="uid://cju2n0y1vth6t" path="res://assets/backgrounds/menu/down_center.jpg" id="3_co0fq"]
[ext_resource type="Texture2D" uid="uid://cqut15hl54bqu" path="res://assets/nueva_interfaz/Icon_Cerrar.svg" id="3_uhqlu"]
[ext_resource type="Script" uid="uid://b7c8g1uo4jfaq" path="res://scripts/nodes/animated_button.gd" id="4_uhqlu"]
[ext_resource type="Script" uid="uid://rii2phyuhpdi" path="res://scripts/auto_size_label.gd" id="5_1eq3g"]
[ext_resource type="Texture2D" uid="uid://cxeig1v1i4qa3" path="res://assets/nueva_interfaz/Icon_Info.svg" id="5_5o77p"]
[ext_resource type="Texture2D" uid="uid://1jqtbnbb8cjc" path="res://assets/nueva_interfaz/Icon_Idioma.svg" id="8_v1ppl"]
[ext_resource type="Texture2D" uid="uid://p4a63jaqwpkv" path="res://assets/nueva_interfaz/Icon_Interrogación.svg" id="10_l0y2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nadmn"]
bg_color = Color(1, 0.83137256, 0.5294118, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_co0fq"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_uhqlu"]
grow_begin = -80.0
grow_end = -80.0
thickness = 2
vertical = true

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6a2nt")
script = ExtResource("1_nadmn")
metadata/_custom_type_script = "uid://cobqsrqfsrbwt"

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource("3_5o77p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_co0fq")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nadmn")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Register" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 58)
layout_mode = 2
icon = ExtResource("2_aw57t")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_uhqlu")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/Register"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Registrarse"
horizontal_alignment = 1
script = ExtResource("5_1eq3g")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_co0fq")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "¿Cual es tu nombre?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Useralias" type="LineEdit" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Tu nombre"
alignment = 1

[node name="ConfirmName" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_uhqlu")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_co0fq")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = -36

[node name="Language" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("8_v1ppl")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_uhqlu")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="TextureButton3" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("5_5o77p")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_uhqlu")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="AboutButton" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("10_l0y2l")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_uhqlu")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_uhqlu")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="ConsejosHbox" type="HBoxContainer" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/ConsejosHbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "¿Consejos?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/ConsejosHbox"]
layout_mode = 2
icon_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_co0fq")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Musica"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_co0fq")

[node name="Label2" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Efectos de sonido"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 30

[node name="CloseMenu" type="Button" parent="MarginContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("3_uhqlu")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("4_uhqlu")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/Register" to="." method="_on_login_pressed"]
[connection signal="text_submitted" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/Useralias" to="." method="_on_useralias_text_submitted"]
[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ConfirmName" to="." method="_on_confirm_name_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Language" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer2/CloseMenu" to="." method="_on_close_menu_pressed"]
